--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/monkey_house"
         android:label="@string/app_name"
+        android:name="com.monkey.milestone.MyApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity android:name="com.monkey.milestone.MainActivity">
@@ -16,6 +17,7 @@
         </intent-filter>
             >
         </activity>
-    </application>
 
+    </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
